Craft Tweaker Progress
setting up alot of Craft Tweaker stuff

--- a/config/artisanworktables/module.Tools.cfg
+++ b/config/artisanworktables/module.Tools.cfg
@@ -73,6 +73,7 @@ general {
     S:TOOL_ENCHANTMENT_TABLE_WHITELIST <
         minecraft:unbreaking
         minecraft:mending
+        minecraft:sharpness
      >
 
     client {
