--- a/config/artisanworktables/module.Worktables.cfg
+++ b/config/artisanworktables/module.Worktables.cfg
@@ -30,50 +30,6 @@ general {
     # By default, all tables are allowed.
     S:ENABLE_VANILLA_CRAFTING <
         basic:workshop
-        basic:workstation
-        basic:worktable
-        blacksmith:workshop
-        blacksmith:workstation
-        blacksmith:worktable
-        carpenter:workshop
-        carpenter:workstation
-        carpenter:worktable
-        chef:workshop
-        chef:workstation
-        chef:worktable
-        chemist:workshop
-        chemist:workstation
-        chemist:worktable
-        designer:workshop
-        designer:workstation
-        designer:worktable
-        engineer:workshop
-        engineer:workstation
-        engineer:worktable
-        farmer:workshop
-        farmer:workstation
-        farmer:worktable
-        jeweler:workshop
-        jeweler:workstation
-        jeweler:worktable
-        mage:workshop
-        mage:workstation
-        mage:worktable
-        mason:workshop
-        mason:workstation
-        mason:worktable
-        potter:workshop
-        potter:workstation
-        potter:worktable
-        scribe:workshop
-        scribe:workstation
-        scribe:worktable
-        tailor:workshop
-        tailor:workstation
-        tailor:worktable
-        tanner:workshop
-        tanner:workstation
-        tanner:worktable
      >
 
     # Set to false to disable workshops.
@@ -92,7 +48,7 @@ general {
 
     # If set to true, crafting tools must have sufficient durability remaining to perform the craft.
     # If set to false, this restriction is ignored.
-    B:RESTRICT_CRAFT_MINIMUM_DURABILITY=true
+    B:RESTRICT_CRAFT_MINIMUM_DURABILITY=false
 
     # Recipes in this list will not be allowed to be crafted in any table.
     # Format is (domain):(path)
@@ -131,21 +87,21 @@ general {
     ##########################################################################################################
 
     harvest_tool_worktable {
-        S:basic=pickaxe
+        S:basic=axe
         S:blacksmith=pickaxe
-        S:carpenter=pickaxe
-        S:chef=pickaxe
-        S:chemist=pickaxe
-        S:designer=pickaxe
+        S:carpenter=axe
+        S:chef=axe
+        S:chemist=axe
+        S:designer=axe
         S:engineer=pickaxe
-        S:farmer=pickaxe
+        S:farmer=axe
         S:jeweler=pickaxe
-        S:mage=pickaxe
+        S:mage=axe
         S:mason=pickaxe
-        S:potter=pickaxe
-        S:scribe=pickaxe
-        S:tailor=pickaxe
-        S:tanner=pickaxe
+        S:potter=axe
+        S:scribe=axe
+        S:tailor=axe
+        S:tanner=axe
     }
 
     ##########################################################################################################
@@ -155,21 +111,21 @@ general {
     ##########################################################################################################
 
     harvest_tool_workstation {
-        S:basic=pickaxe
+        S:basic=axe
         S:blacksmith=pickaxe
-        S:carpenter=pickaxe
-        S:chef=pickaxe
-        S:chemist=pickaxe
-        S:designer=pickaxe
+        S:carpenter=axe
+        S:chef=axe
+        S:chemist=axe
+        S:designer=axe
         S:engineer=pickaxe
-        S:farmer=pickaxe
-        S:jeweler=pickaxe
-        S:mage=pickaxe
-        S:mason=pickaxe
-        S:potter=pickaxe
-        S:scribe=pickaxe
-        S:tailor=pickaxe
-        S:tanner=pickaxe
+        S:farmer=axe
+        S:jeweler=axe
+        S:mage=axe
+        S:mason=axe
+        S:potter=axe
+        S:scribe=axe
+        S:tailor=axe
+        S:tanner=axe
     }
 
     ##########################################################################################################
@@ -179,21 +135,21 @@ general {
     ##########################################################################################################
 
     harvest_tool_workshop {
-        S:basic=pickaxe
-        S:blacksmith=pickaxe
-        S:carpenter=pickaxe
-        S:chef=pickaxe
-        S:chemist=pickaxe
-        S:designer=pickaxe
+        S:basic=axe
+        S:blacksmith=axe
+        S:carpenter=axe
+        S:chef=axe
+        S:chemist=axe
+        S:designer=axe
         S:engineer=pickaxe
-        S:farmer=pickaxe
+        S:farmer=axe
         S:jeweler=pickaxe
-        S:mage=pickaxe
-        S:mason=pickaxe
-        S:potter=pickaxe
-        S:scribe=pickaxe
-        S:tailor=pickaxe
-        S:tanner=pickaxe
+        S:mage=axe
+        S:mason=axe
+        S:potter=axe
+        S:scribe=axe
+        S:tailor=axe
+        S:tanner=axe
     }
 
     ##########################################################################################################
@@ -251,7 +207,7 @@ general {
     ##########################################################################################################
 
     fluid_capacity_workshop {
-        I:basic=16000
+        I:basic=0
         I:blacksmith=16000
         I:carpenter=16000
         I:chef=16000
