--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,1 +1,3 @@
+T:{ForgeCaps:{"customnpcs:itemscripteddata":{}},id:"minecraft:tnt",Count:1,Damage:0s}
+T:{ForgeCaps:{"customnpcs:itemscripteddata":{}},id:"artisanworktables:worktable",Count:1,Damage:5s}
 T:{ForgeCaps:{"customnpcs:itemscripteddata":{}},id:"openmodularturrets:ammo_meta",Count:1,Damage:1s}
