--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -41,6 +41,7 @@ advanced {
         artisanworktables:artisans_groover_silver
         artisanworktables:artisans_gemcutter_osmium
         artisanworktables:artisans_razor_bronze
+        minecraft:melon_seeds
         artisanworktables:artisans_solderer_hardcarbon
         minecraft:potion:water_breathing;effect.waterBreathing, Duration: 9600
         artisanworktables:artisans_hammer_copper
@@ -79,6 +80,7 @@ advanced {
         artisanworktables:artisans_sifter_tin
         vs_control:ship_helm_wheel
         artisanworktables:artisans_carver_silver
+        minecraft:pumpkin_seeds
         artisanworktables:artisans_pan_boron
         artisanworktables:artisans_pencil_platinum
         artisanworktables:artisans_chisel_gold
@@ -356,6 +358,7 @@ advanced {
         customnpcs:npcredstoneblock
         artisanworktables:artisans_tsquare_bone
         itemfilters:filter
+        minecraft:cooked_rabbit
         minecraft:purple_glazed_terracotta
         artisanworktables:artisans_athame_tin
         artisanworktables:artisans_compass_iron
@@ -864,6 +867,7 @@ advanced {
         artisanworktables:artisans_quill_electrum
         exoticbirds:bluejay_egg
         minecraft:splash_potion:water_breathing;effect.waterBreathing, Duration: 9600
+        minecraft:pumpkin
         artisanworktables:artisans_driver_silver
         artisanworktables:artisans_driver_tin
         artisanworktables:artisans_shears_hardcarbon
