--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -21,11 +21,11 @@ world69609650 {
     B:bookmarkOverlayEnabled=true
 
     # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=true
+    B:cheatItemsEnabled=false
 
     # Hide and unhide ingredients by clicking them in the list.
-    B:editEnabled=true
-    S:filterText=be
+    B:editEnabled=false
+    S:filterText=
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
